# computer_graphics_tut

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  untitled
cmake/sdl2/: FindSDL2.cmake
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
